fix: bcrypt direct, seed flush order, Frigate 0.14 config, backup crond, frontend Dockerfile
- Replace passlib+bcrypt with bcrypt direct (fixes passlib incompatibility)
- Add db.flush() between parent/child inserts in seed to avoid FK violations
- Wrap create_all in try/except for race-condition safety
- Use 1 uvicorn worker to avoid startup race conditions
- Update Frigate configs: remove deprecated ui/events sections (0.14+)
- Fix backup Dockerfile: use Alpine busybox crond instead of rclone image
- Remove non-existent /public COPY from frontend Dockerfile
- Add email-validator dependency for Pydantic EmailStr

--- a/infra/frigate/config.dev.yml
+++ b/infra/frigate/config.dev.yml
@@ -1,5 +1,6 @@
 # Frigate config for DEVELOPMENT with RTSP simulator
 # Uses rtsp-sim container instead of real cameras
+# Compatible with Frigate 0.14+
 
 mqtt:
   enabled: false
@@ -22,10 +23,16 @@ record:
   retain:
     days: 3
     mode: all
-  events:
-    retain:
-      default: 7
-      mode: active_objects
+
+review:
+  alerts:
+    labels:
+      - person
+      - car
+  detections:
+    labels:
+      - dog
+      - cat
 
 snapshots:
   enabled: true
@@ -51,6 +58,7 @@ cameras:
           roles:
             - detect
     detect:
+      enabled: true
       width: 640
       height: 360
       fps: 5
@@ -66,13 +74,10 @@ cameras:
           roles:
             - detect
     detect:
+      enabled: true
       width: 640
       height: 360
       fps: 5
-
-ui:
-  live_mode: mse
-  timezone: America/Mexico_City
 
 logger:
   default: info
