--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,10 +3,10 @@ uvicorn[standard]>=0.30,<1
 sqlalchemy>=2.0,<3
 psycopg[binary]>=3.1,<4
 alembic>=1.13,<2
-pydantic>=2.5,<3
+pydantic[email]>=2.5,<3
 pydantic-settings>=2.1,<3
 python-jose[cryptography]>=3.3,<4
-passlib[bcrypt]>=1.7,<2
+bcrypt>=4.0,<5
 python-multipart>=0.0.6
 pyotp>=2.9,<3
 qrcode[pil]>=7.4,<8
