--- a/infra/rclone/Dockerfile
+++ b/infra/rclone/Dockerfile
@@ -1,7 +1,13 @@
-FROM rclone/rclone:latest
-RUN apk add --no-cache bash tzdata coreutils findutils
+FROM alpine:3.19
+
+# Install rclone + cron utilities (busybox crond included by default)
+RUN apk add --no-cache bash tzdata coreutils findutils rclone
+
 WORKDIR /work
 COPY backup.sh /work/backup.sh
 COPY crontab /etc/crontabs/root
 RUN chmod +x /work/backup.sh
-CMD ["crond", "-f", "-l", "8"]
+
+# busybox crond (foreground, log level 8)
+ENTRYPOINT []
+CMD ["/usr/sbin/crond", "-f", "-l", "8"]
