feat: recordings module - daily video playback system
- Recording model (UUID, camera FK, date, filename, duration, size, status)
- REST API: list, get, play (MP4 streaming), upload, simulate, delete
- Simulate endpoint copies sample videos as yesterday's recordings
- Frontend recordings page with camera/date filters, video player modal
- Sidebar navigation: Grabaciones link with camera icon
- Docker volumes: ./data/recordings:/recordings, ./samples:/samples:ro
- API client functions for all recording operations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,8 @@ services:
   frigate:
     image: ghcr.io/blakeblackshear/frigate:stable
     shm_size: "256mb"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     volumes:
       - ./infra/frigate/config.yml:/config/config.yml:ro
       - ./data/frigate:/media/frigate
@@ -76,6 +78,8 @@ services:
         condition: service_healthy
     volumes:
       - ./data/evidence:/evidence
+      - ./data/recordings:/recordings
+      - ./samples:/samples:ro
     networks: [core]
     restart: unless-stopped
 
